--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.7.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
