--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "aos": "^2.3.4",
     "axios": "^1.4.0",
     "i18next": "^23.3.0",
     "i18next-browser-languagedetector": "^7.1.0",
