--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.2",
     "react-icons": "^4.10.1",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
